# phishstory

./: .gitignore  pyproject.toml
phishstory/: .env.json.SAMPLE  artists.json  tiph.md  tiph.py
tests/data/: phish_1252801481_setlist.html  setlistdata.json  test.html
