[tool.poetry]
name = "phishstory"
version = "0.1.0"
description = "Python module to extract data from phish.net for setlists, etc... for this day is Phish history."
authors = ["Jay Flaherty <jayflaherty@gmail.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.8"
phishnet_api_v3 = "^0.1.0"
html2text = "^2019.9.26"
BeautifulSoup4 = "^4.8.2"
praw = "^6.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
