[tool.poetry]
name = "phishstory"
version = "0.1.0"
description = "Python module to extract data from phish.net for setlists, etc... for this day is Phish history."
authors = ["Jay Flaherty <jayflaherty@gmail.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.8"
phishnet_api_v3 = "^0.1.0"
html2text = "^2020.1.16"
BeautifulSoup4 = "^4.9.3"
praw = "^7.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pylint = "^2.9.3"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
